--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,13 @@ po/*~
 # RStudio Connect folder
 rsconnect/
 /data
+writing/paper1_visualvocab_files/figure-latex/figure-1.pdf
+writing/paper1_visualvocab_files/figure-latex/figure-1.png
+writing/paper1_visualvocab_files/figure-latex/unnamed-chunk-10-1.pdf
+writing/paper1_visualvocab_files/figure-latex/unnamed-chunk-10-1.png
+writing/paper1_visualvocab_files/figure-latex/unnamed-chunk-16-1.pdf
+writing/paper1_visualvocab_files/figure-latex/unnamed-chunk-16-1.png
+writing/paper1_visualvocab_files/figure-latex/unnamed-chunk-17-1.pdf
+writing/paper1_visualvocab_files/figure-latex/unnamed-chunk-17-1.png
+writing/paper1_visualvocab_files/figure-latex/unnamed-chunk-18-1.pdf
+writing/paper1_visualvocab_files/figure-latex/unnamed-chunk-18-1.png
