update gitignore and rproj file

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,10 @@ writing/paper1_visualvocab_files/figure-latex/unnamed-chunk-17-1.pdf
 writing/paper1_visualvocab_files/figure-latex/unnamed-chunk-17-1.png
 writing/paper1_visualvocab_files/figure-latex/unnamed-chunk-18-1.pdf
 writing/paper1_visualvocab_files/figure-latex/unnamed-chunk-18-1.png
+stimuli/0_get_CLIP_similarities/.DS_Store
+stimuli/.DS_Store
+/analysis/step2_descriptives_cursor_files
+analysis/step2_descriptives_files/figure-html/unnamed-chunk-7-1.png
+analysis/step2_descriptives_files/figure-html/unnamed-chunk-8-1.png
+writing/.DS_Store
+.DS_Store
