add selection scripts and update gitgnore

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,17 @@ analysis/step2_descriptives_files/figure-html/unnamed-chunk-7-1.png
 analysis/step2_descriptives_files/figure-html/unnamed-chunk-8-1.png
 writing/.DS_Store
 .DS_Store
+writing/feedbacl/paper1_visualvocab_AT.pdf
+analysis/step2_descriptives_cursor.Rmd
+analysis/VSS_analyses.Rmd
+analysis/wrangle_clip_values.Rmd
+backup.R
+writing/paper1_visualvocab.fff
+writing/paper1_visualvocab.tex
+writing/paper1_visualvocab.ttt
+/writing/paper1_visualvocab_files/figure-docx
+/writing/paper1_visualvocab_files/figure-latex
+writing/ref.Rmd
+writing/paper1_visualvocab.tex
+writing/paper1_visualvocab.ttt
+writing/paper1_visualvocab.tex
