--- a/.gitignore
+++ b/.gitignore
@@ -47,7 +47,7 @@ po/*~
 
 # RStudio Connect folder
 rsconnect/
-/data
+/data/raw
 writing/paper1_visualvocab_files/figure-latex/figure-1.pdf
 writing/paper1_visualvocab_files/figure-latex/figure-1.png
 writing/paper1_visualvocab_files/figure-latex/unnamed-chunk-10-1.pdf
